--- a/ReactJS/react-fundamentos/package.json
+++ b/ReactJS/react-fundamentos/package.json
@@ -4,10 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "babel src -d build"
+    "build": "webpack"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.0",
     "@babel/core": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
@@ -16,6 +15,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
