--- a/ReactJS/react-fundamentos/package.json
+++ b/ReactJS/react-fundamentos/package.json
@@ -12,7 +12,11 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
